--- a/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
@@ -138,14 +138,11 @@ public without sharing class ABSLI_CreateCaseValidationsController {
             if(policy!=null)
             {
                	requestWrap.policy_id = policy.Policy_No__c;
-                Date today = Date.today();
-                DateTime todayDateTime = DateTime.newInstance(today.year(),today.month(),today.day());
-                requestWrap.effective_date = (todayDateTime.format('dd-MM-yyyy'));
-                /*DateTime effectiveDateTime;
+                DateTime effectiveDateTime;
                 if(policy.Effective_Date__c!=null){
                 	effectiveDateTime = DateTime.newInstance(policy.Effective_Date__c.year(), policy.Effective_Date__c.month(),policy.Effective_Date__c.day());    
                 }
-               	requestWrap.effective_date = policy.Effective_Date__c!=null ? (effectiveDateTime.format('dd-MM-yyyy')) : '';*/
+               	requestWrap.effective_date = policy.Effective_Date__c!=null ? (effectiveDateTime.format('dd-MM-yyyy')) : '';
                 requestWrap.source = ABSLI_Constants.GEN_FUND_SOURCE;
                 ABCL_IntegrationCallout.IntegrationResponseWrapper genFundResponse = ABCL_IntegrationCallout.executeCallout(ABSLI_Constants.POLICY_GEN_FUND_INTEGRATION_METADATA,
                                                                                                                     JSON.serialize(requestWrap),
