--- a/force-app/main/default/classes/ASF_CaseQueryHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseQueryHandler.cls
@@ -2,8 +2,8 @@
  * @description       : 
  * @author            : rsinghnagar@salesforce.com
  * @group             : 
- * @last modified on  : 07-17-2024
- * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
+ * @last modified on  : 05-14-2024
+ * @last modified by  : rsinghnagar@salesforce.com
 **/
 public without sharing class ASF_CaseQueryHandler {
     private static List<Case> cases = null;
@@ -22,6 +22,7 @@ public without sharing class ASF_CaseQueryHandler {
     private static List<Case> casesWithConfigQueryFields = null;
     public static boolean refreshRecords = false;
     
+    
     /**
     * @description : getcases
     * @author rsinghnagar@salesforce.com | 05-13-2024 
@@ -33,7 +34,7 @@ public without sharing class ASF_CaseQueryHandler {
             cases = [SELECT Id,BusinessHoursId,Status,OwnerId,CCC_External_Id__c,Stage__c,pending_clarification__c,CreatedById,
                      Previous_Stage__c,ClosedDate, PAY_Payment_Detail__c, SLA_Target_1__c, CSAT__c, DB_Hours__c,
                      has_CheckLists__c, Has_Open_Tasks__c,ABFL_Case_Detail__c,ABFL_Case_Detail__r.ABCOwner__c,Technical_Source__c,
-                     ABFL_Case_Detail__r.Resolution_Comments__c, Source__c,Nature__c,Description,Feature_Skipper_Flag__c,
+                     ABFL_Case_Detail__r.Resolution_Comments__c, Source__c,Nature__c,Description,
                      (Select Id, Checklist_External_Id__c, Status__c, Case__c from Checklists__r),
                      (Select Id, Work_Item_External_ID__c, WhatId from Tasks)
                      FROM Case
@@ -143,16 +144,15 @@ public without sharing class ASF_CaseQueryHandler {
     **/
     public static list<ASF_Case_Stage_Config__c> getCaseStageConfigWithRlAndIntr(Set<String> cccExternalId){
         if(caseStageConfigs == null || refreshRecords){
-            // VIRENDRA - 8 JUNE 2024 - ADDED Default_Queue_user_Name__c in QUERY.
-            caseStageConfigs = [SELECT ID,StageName__c,Status_Mapping__c,Order__c,Query_Fields__c,Manual_Stage__c,
+            caseStageConfigs = [SELECT ID,Case_Category_Config__r.isStageSkip__c,StageName__c,Status_Mapping__c,Order__c,Query_Fields__c,Manual_Stage__c, //Case_Category_Config__r.isStageSkip__c added by EY Nikhil for PR970457-2176
                                 Is_Approval_Stage__c,Manual_Approval__c,Case_Category_Config__r.CCC_External_Id__c,
                                 Case_Category_Config__r.Order__c,SLA_Target_1_Type__c,SLA_Target_2_Type__c,SLA_Target_3_Type__c,
                                 Optional_Stage__c,Default_Queue__c,Default_Error_Queue__c, Gateway_Stage__c,
-                                AfterStageApexClass__c, BeforeStageApexClass__c,Assign_To_Last_Actioned_Stage__c,Case_Category_Config__c,Default_Queue_user_Name__c,
+                                AfterStageApexClass__c, BeforeStageApexClass__c,Assign_To_Last_Actioned_Stage__c,Case_Category_Config__c,
                                 (SELECT ID,Order__c,Type__c,Logical_Condition__c,Name,Assigned_Queue_Id__c,Validation_Message__c,Stage_Name__c,Step_1_Approver_1__c,
                                  Step_1_Approver_2__c,Step_2_Approver_1__c,Step_2_Approver_2__c,Approval_Success_Fields_to_Update__c,
                                  Approval_Rejected_Fields_to_Update__c,Approval_Style__c,Approval_SuccessStageMovement__c FROM Case_Rules__r),
-                                (SELECT ID, Auto_Run_on_Load__c ,Run_Integration_From_LWC__c,C3ExternalId__c, Display_Name__c ,Display_Order__c ,STP_API_Identifier__c,
+                                (SELECT ID, Auto_Run_on_Load__c ,C3ExternalId__c, Display_Name__c ,Display_Order__c ,STP_API_Identifier__c,
                                  External_Id__c,Mandatory_At_Stage_Movement__c ,Processing_Class__c ,STP_Processing_Class__c, Type__c,
                                  UI_Component__c ,Visibility_Class__c ,When_to_Appear__c, Query_Fields__c, Priority__c  FROM ASF_Integrations__r)
                                 FROM ASF_Case_Stage_Config__c
@@ -179,8 +179,6 @@ public without sharing class ASF_CaseQueryHandler {
                 Logical_Condition__c,
                 Name,
                 Assigned_Queue_Id__c,
-                // VIRENDRA - 8 June 2024 - ADDED Assignment_Queue_Name__c
-                Assignment_Queue_Name__c,
                 Assigned_Error_Queue_Id__c,
                 Validation_Message__c,
                 C3ExternalId__c,
@@ -207,8 +205,7 @@ public without sharing class ASF_CaseQueryHandler {
                     FROM Work_Items__r
                 ),
                 (
-                    // VIRENDRA - 13 June 2024 - ADDED Picklist_Options__c in SOQL.
-                    SELECT Id, Label__c, Name, Type__c, Mandatory__c,Description__c, Checklist_External_Id__c, Picklist_Options__c 
+                    SELECT Id, Name, Type__c, Mandatory__c,Description__c, Checklist_External_Id__c
                     FROM Case_Checklist_Masters__r
                 ),
                 Step_1_Approver_1__c,
@@ -252,7 +249,6 @@ public without sharing class ASF_CaseQueryHandler {
     **/
     public static List<ASF_Case_SLA_History__c> getCaseSLAHistories(Set<Id> caseIds){
         if(caseSLAHistories == null || refreshRecords){
-            // VIRENDRA - 11 June 2024 - ADDED CASE_ASSIGNED_TEAM__C in QUERY 
             caseSLAHistories = [SELECT Id, Case__c, Actual_Time_Taken__c, Agent_CC__c, 
                                                           Agent_LOB__c, Agent_LOC__c, Agent__c, Agreed_SLA_in_Hrs__c, Breached_User_Id__c, 
                                                           Breached_User_Level1__c, Breached_User_Level2__c, Breached_User_Level3__c, 
@@ -266,8 +262,7 @@ public without sharing class ASF_CaseQueryHandler {
                                                           Rejection_Id__c, SLA_2_Email_Sent__c, SLA_3_Email_sent__c, 
                                                           SLA_CC__c, SLA_LOB__c, SLA_LOC__c, Stage_End_Date__c, 
                                                           Stage_Start_Date__c, Stage_Violation_Start_Date__c, 
-                                                          Stage__c, Status__c, Time_Taken_In_Business_Hour__c, Time_Taken__c, is_Running_Record__c,
-                                						  Case_Assigned_Team__c
+                                                          Stage__c, Status__c, Time_Taken_In_Business_Hour__c, Time_Taken__c, is_Running_Record__c 
                                                           FROM ASF_Case_SLA_History__c
                                                           WHERE Case__c =: caseIds WITH SYSTEM_MODE order by Stage_End_Date__c DESC
                                                          ];
@@ -299,7 +294,6 @@ public without sharing class ASF_CaseQueryHandler {
     * @return List<ASF_Case_Category_Config__c> 
     **/
     public static List<ASF_Case_Category_Config__c> getCaseCategoryConfigs(List<String> cccExternalIds) {
-        // VIRENDRA - 28 JUN 2024 - ADDED IGMS_Code__c  in QUERY.
         if(caseCategoryConfigs == null || refreshRecords){
             
             caseCategoryConfigs = [SELECT Id, Is_FTR_Journey__c, Nature__c, Product__c, Source__c, 
@@ -307,8 +301,7 @@ public without sharing class ASF_CaseQueryHandler {
                                     First_Stage__c, Is_Bulk_Creatable__c, ASF_Is_Cloneable__c,
                                     Reopen_Days__c, Reopen_Style__c, Is_STP__c,Multiple_Child_Details__c,
                                     Only_CRN_Mandatory__c,Custom_Segment__c,is_FA_Mandatory__c,Priority__c,
-                                    Is_Recategorise_Allowed__c,Allow_file_upload__c,LOB__c, No_Owner_Change_on_Recat__c,IGMS_Code__c,
-                                    Activity__c
+                                    Is_Recategorise_Allowed__c,Allow_file_upload__c,LOB__c, No_Owner_Change_on_Recat__c
                                     FROM ASF_Case_Category_Config__c 
                                     WHERE CCC_External_Id__c IN :cccExternalIds WITH SYSTEM_MODE];
                                     
