--- a/force-app/main/default/classes/ABSLI_BankAccountUpdateIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_BankAccountUpdateIntegration.cls
@@ -36,10 +36,10 @@ public with sharing class ABSLI_BankAccountUpdateIntegration implements ASF_Inte
             	result.status = ABSLI_Constants.ERROR;
             	result.response = Custom_Messages__mdt.getInstance('ABSLI_CustomerPortal_STPFalse_Err').Message__c;
             }else{
-            	if (caseRecord.ABSLI_Case_Detail__r.Status_Valid_For_STP__c || caseRecord.Technical_Source__c == 'API') {
+            	if (caseRecord.ABSLI_Case_Detail__r.Status_Valid_For_STP__c && caseRecord.Technical_Source__c == 'API') {
                     result.status = ABSLI_Constants.SUCCESS;
-                }    
-            }
+				}
+			}    
 
 			resultMap.put(caseRecord.Id, result);
 		}
