--- a/force-app/main/default/classes/ABSLI_Constants.cls
+++ b/force-app/main/default/classes/ABSLI_Constants.cls
@@ -253,4 +253,6 @@ public class ABSLI_Constants {
     public static final List<String> SURRENDER_WITHDRAWAL_CASE_TYPES = new List<String>{'PPAY001','PPAY008'};
     public static final String SURRENDER_WITHDRAWAL_USER_BRANCH_NAME = 'User Branch';
     public static final String SURRENDER_WITHDRAWAL_USER_BRANCH_CODE = 'User123';
+
+    public static final String EMAIL_SOURCE_REQ_BY = 'Customer';
 }
